awx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-tailscale
  namespace: awx
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - awx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: awx-service
                port:
                  number: 80
            path: /
            pathType: Prefix
